- The clock, date, and battery percentage will now only update when it's visible.
- Fixed the change wallpaper detect button using a primary font instead of the secondary one
- Fixed page size being too small when viewed on mobile devices
- Optimized page layout for mobile devices
- Subwindows will now open in full screen when the window is small enough


v.1.15 [Public Preview 4] (December 1, 2022)
This version adds a way to launch or open all the shortcuts in a category. It also adds a way to import and export shortcuts using text strings that stores the shortcut name and urls.
=== Additions ===
- Added an import and export shortcut system for Shortcut Editor.
- Added a "Welcome back" message on the home page.
- Added an "Open all shortcuts" button on the Category Navigation sidebar. (Unblock pop-ups for DL_Main.html for this feature to work.)
=== Changes ===
- Updated the update information screen.
- Updated the loading screen to have a fade in animation and an updated layout.
- The loading screen text will now only appear once it has the proper values loaded.
- The timer that dictates when the loading screen fades out will now only start counting once the rest of the system is done loading.
- Header menu buttons now updates the cursor to a pointer when hovering over it.
- Header buttons now relies on preset arrays to make content more dynamic.
- Removed the button instruction for Settings > Appearance > Text
- Toast notifications now limit information that it can display.
- Toast notifications can be forcefully closed by clicking on it.
- Toast notifications no longer fades a little bit when being hovered.
=== Experiments ===
= Pomodoro Technique Timer =
- Access on DL_Pomodoro.html.
= In-Tab Browser and Shortcut Preview =
- This feature allows you to view the clicked shortcut without opening a new tab, and will be opened inside the launcher tab.


v.1.14 [Public Preview 3] (September 14, 2022)