@@ -116,9 +116,14 @@
 	to {transform: translateX(-100%);}
 }
 
-@keyframes opening_pageTab{
-	from {opacity: 0%; transform: translateY(0px);}
-	to {opacity: 100%; transform: translateY(-30px);}
+@keyframes opening_pageTab_Upwards{
+	from {opacity: 0%; transform: translateY(-50px);}
+	to {opacity: 100%; transform: translateY(0px);}
+}
+
+@keyframes opening_pageTab_Downwards{
+	from {opacity: 0%; transform: translateY(50px);}
+	to {opacity: 100%; transform: translateY(0px);}
 }
 
 @keyframes opening_Dropdown{
